--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rc-slider": "^9.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-photo-album": "^2.4.1",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
@@ -33,7 +34,8 @@
     "sass": "^1.26.10",
     "swiper": "^6.5.1",
     "swr": "^1.3.0",
-    "use-onclickoutside": "^0.4.1"
+    "use-onclickoutside": "^0.4.1",
+    "yet-another-react-lightbox": "^3.20.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
