--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "image-size": "^1.1.1",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "next-redux-wrapper": "^6.0.2",
@@ -32,6 +33,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.26.10",
+    "sharp": "^0.33.4",
     "swiper": "^6.5.1",
     "swr": "^1.3.0",
     "use-onclickoutside": "^0.4.1",
